Fixed bug with stretched logo a second time.
Previous issue was hidden by caching.

--- a/secure.css
+++ b/secure.css
@@ -789,7 +789,7 @@ body.docked #show-topic-admin {
 }
 
 img.logo-big {
-	width: 224px !important;
+	width: 66px !important;
 }
 
 #reply-control ul li .selected {
